DatatypeConverter doesn't exist in Android